--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "cloudberry"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
-
+description = "USB stack for embedded Rust"
+license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
